<resources>
    <string name="app_name">UsbGps</string>
    <string name="test_gps_title">Satellite Analysis</string>
    <string name="pref_start_gps_title">Start/Stop GPS</string>
    <string name="pref_start_gps_summary_off">Usb GPS is off</string>
    <string name="pref_start_gps_summary_on">Usb GPS is on</string>
    <string name="pref_start_gps_params_title">GPS Options (SiRF)</string>
    <string name="pref_gps_location_provider_title">Location provider options</string>
    <string name="pref_gps_location_provider_summary">Usb GPS will replace internal GPS</string>
    <string name="pref_replace_std_gps_title">Replace internal GPS</string>
    <string name="pref_replace_std_gps_summary">Disable the internal GPS and </string>
    <string name="pref_force_enable_provider_title">Auto-enable location provider</string>
    <string name="pref_force_enable_provider_summary_on">Auto-enable the location provider, even if it has been disabled</string>
    <string name="pref_force_enable_provider_summary_off">Auto-enable the location provider only if it doesn\'t exist yet</string>
    <string name="pref_mock_gps_name_title">Mock location provider name</string>
    <string name="pref_mock_gps_name_summary">Usb GPS name: %s</string>
    <string name="pref_connection_retries_title">Connection retry number</string>
    <string name="pref_connection_retries_summary">Number of attempts before exiting: %s</string>
    <string name="pref_recording_title">Enable/Disable NMEA log</string>
    <string name="pref_recording_summary">Record the USB GPS Location data</string>
    <string name="pref_recording_params_title">Recording parameters</string>
    <string name="pref_trackfile_prefix_title">Trackfiles prefix</string>
    <string name="pref_trackfile_prefix_summary">Select the prefix for the track files</string>
    <string name="pref_trackfile_directory_title">Trackfiles directory</string>
    <string name="pref_trackfile_directory_summary">Select the directory for the track files</string>
    <string name="pref_gps_device_title">Choose Usb GPS</string>
    <string name="pref_gps_device_summary">"Current device: %s"</string>
    <string name="pref_gps_device_speed_title">Choose GPS device speed</string>
    <string name="pref_gps_device_speed_summary">"Current speed: %s"</string>
    <string name="pref_about_title">About</string>
    <string name="pref_about_summary"></string>
    <string name="pref_sirf_gps_title">SiRF GPS</string>
    <string name="pref_sirf_gps_summary">Enable SiRF Options</string>
    <string name="pref_sirf_nmea_category_title">Choice of NMEA sentences</string>
    <string name="pref_sirf_gps_category_title">GPS operation</string>
    <string name="pref_enable_gga_title">Enable NMEA GGA</string>
    <string name="pref_enable_gga_summary_off">NMEA GGA sentences are off</string>
    <string name="pref_enable_gga_summary_on">NMEA GGA sentences are on</string>
    <string name="pref_enable_rmc_title">Enable NMEA RMC</string>
    <string name="pref_enable_rmc_summary_off">NMEA RMC sentences are off</string>
    <string name="pref_enable_rmc_summary_on">NMEA RMC sentences are on</string>
    <string name="pref_enable_gll_title">Enable NMEA GLL</string>
    <string name="pref_enable_gll_summary_off">NMEA GLL sentences are off</string>
    <string name="pref_enable_gll_summary_on">NMEA GLL sentences are on</string>
    <string name="pref_enable_vtg_title">Enable NMEA VTG</string>
    <string name="pref_enable_vtg_summary_off">NMEA VTG sentences are off</string>
    <string name="pref_enable_vtg_summary_on">NMEA VTG sentences are on</string>
    <string name="pref_enable_gsa_title">Enable NMEA GSA</string>
    <string name="pref_enable_gsa_summary_off">NMEA GSA sentences are off</string>
    <string name="pref_enable_gsa_summary_on">NMEA GSA sentences are on</string>
    <string name="pref_enable_gsv_title">Enable NMEA GSV</string>
    <string name="pref_enable_gsv_summary_off">NMEA GSV sentences are off</string>
    <string name="pref_enable_gsv_summary_on">NMEA GSV sentences are on</string>
    <string name="pref_enable_zda_title">Enable NMEA ZDA</string>
    <string name="pref_enable_zda_summary_off">NMEA ZDA sentences are off</string>
    <string name="pref_enable_zda_summary_on">NMEA ZDA sentences are on</string>
    <string name="pref_enable_sbas_title">SBAS (WAAS/EGNOS)</string>
    <string name="pref_enable_sbas_summary_off">SBAS is off</string>
    <string name="pref_enable_sbas_summary_on">SBAS is on</string>
    <string name="pref_enable_nmea_title">NMEA/Binary mode</string>
    <string name="pref_enable_nmea_summary_off">Binary mode is on</string>
    <string name="pref_enable_nmea_summary_on">NMEA mode is on</string>
    <string name="pref_enable_static_navigation_title">Static Navigation</string>
    <string name="pref_enable_static_navigation_summary_off">Static Navigation disabled</string>
    <string name="pref_enable_static_navigation_summary_on">Static Navigation enabled</string>
    <string name="msg_gps_provider_started">Usb GPS... started</string>
    <string name="msg_gps_provider_stopped">Usb GPS... stopped</string>
    <string name="msg_gps_provider_already_started">Usb GPS... is already on</string>
    <string name="msg_gps_provider_stopped_by_problem">"Cannot start: %s"</string>
    <string name="msg_two_many_connection_problems">Too many connection problems</string>
    <string name="msg_gps_provider_disabled">GPS is disabled</string>
    <string name="msg_gps_provider_cant_connect">Unable to connect to device</string>
    <string name="msg_mock_location_disabled">Mock locations disabled in settings</string>
    <string name="msg_mock_location_disabled_full">Mock locations disabled in settings\nClick here to enable mock locations</string>
    <string name="msg_mock_location_disabled_full_dialog_text">Mock locations disabled in settings\nOpen mock location settings?</string>
    <string name="msg_usb_provider_device_not_connected">Device not connected</string>
    <string name="msg_nmea_recording_started">GPS NMEA recording... started</string>
    <string name="msg_nmea_recording_stopped">GPS NMEA recording... stopped</string>
    <string name="msg_nmea_recording_already_started">GPS track recording... is already on</string>
    <string name="foreground_service_started_notification_title">UsbGps</string>
    <string name="foreground_gps_provider_started_notification">UsbGps service started</string>
    <string name="foreground_nmea_recording_started_notification">UsbGps NMEA recording service started</string>
    <string name="connection_problem_notification_title">UsbGps: connection problem</string>
    <plurals name="connection_problem_notification">
        <item quantity="one">Will retry one more time before closing</item>
        <item quantity="other">Will retry %d more times before closing</item>
    </plurals>
    <string name="service_closed_because_connection_problem_notification_title">UsbGps stopped</string>
    <string name="service_closed_because_connection_problem_notification">"Reason: %s"</string>
    <string name="about_title">About</string>
    <string name="about_version">UsbGPS4Droid %s</string>
    <string name="about_copyright_1">Copyright (C) 2015-2018 Oliver Bell</string>
    <string name="about_copyright_2">Copyright (C) 2010-2013 Herbert von Broeuschmeul</string>
    <string name="about_copyright_3">Copyright (C) 2010-2013 BluetoothGPS4Droid Project</string>
    <string name="about_copyright_4">Copyright (C) 2011-2013 UsbGPS4Droid Project</string>
    <string name="about_app_desc">Usb GPS for Android is an application
                                    for using an external usb GPS on Android devices.
    </string>
    <string name="about_license">It is open source software 
    	distributed free of charge under the terms of the <a href="http://www.gnu.org/licenses/gpl-3.0-standalone.html"><b>GNU General Public License</b></a>.
    </string>
    <string name="about_sources">The source code is available here:
        https://github.com/freshollie/UsbGps4Droid
    </string>
    <string name="msg_no_location_permission">No permission given for device location. Click here to enable.</string>
    <string-array name="pref_gps_device_speed_values">
        <item>auto</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>19200</item>
        <item>38400</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string name="title_activity_settings">Usb Gps Settings</string>
    <string name="pref_toast_logging_title">Show Toasts</string>
    <string name="pref_toast_logging_summary">Show debug toast messages on USB Gps status changes</string>
    <string name="number_of_satellites_placeholder">Number of satellites: %s</string>
    <string name="accuracy_placeholder">Accuracy: %s</string>
    <string name="location_placeholder">Location: Lat %1$s, Lon %2$s</string>
    <string name="elevation_placeholder">Altitude: %s</string>
    <string name="info_activity_title">UsbGps - Overview</string>
    <string name="pref_start_on_boot_summary_on">Usb Gps service will try and start when android starts</string>
    <string name="pref_start_on_boot_summary_off">Usb Gps service will not try and start when android starts</string>
    <string name="pref_start_on_boot_title">Start service on boot</string>
    <string name="pref_category_device_title">Device</string>
    <string name="pref_category_service_title">Service</string>
    <string name="pref_category_sirf_title">SiRF</string>
    <string name="pref_category_nmea_log_title">NMEA Log</string>
    <string name="pref_category_debug_title">Debug</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_set_time_key">setTime</string>
    <string name="pref_set_time_summary_on">Set the system time to the gps time when a time is received</string>
    <string name="pref_set_time_summary_off">Don\'t set the system time to the gps time</string>
    <string name="pref_set_time_title">Set system time from GPS (Root required)</string>
    <string name="pref_category_about_title">About</string>
    <string name="warning_set_time_needs_su">Set time function needs SU permission</string>
    <string name="warning_no_developer_options">Developer options need to be enabled first</string>
    <string name="gps_time_placeholder">Gps Time: %1$s\nSys Time: %2$s</string>
    <string name="button_open_mock_location_settings">Open mock location settings</string>
    <string name="error_location_permission_required">Location permission is required for UsbGps to function</string>
    <string name="error_storage_permission_required">In order to write a track file, the app needs storage permission</string>
    <string name="settings_button_title">Settings</string>
    <string name="pref_start_on_boot_summary">If enabled, the USB GPS service will be automatically started on boot</string>
    <string name="pref_set_time_summary">Set the system time from the received GPS time</string>
    <string name="pref_daynight_theme_title">Automatic day-night app theme</string>
    <string name="pref_daynight_theme_summary">Show light theme during daytime and dark theme at night</string>
    <string name="pref_daynight_theme_key">dayNightMode</string>
    <string name="gps_latitude_label">Lat:</string>
    <string name="gps_longitude_label">Long:</string>
    <string name="gps_fix_time_label">Time:</string>
    <string name="gps_ttff_label">TTFF:</string>
    <string name="gps_altitude_label">Alt:</string>
    <string name="gps_altitude_msl_label">Alt (MSL):</string>
    <string name="gps_accuracy_label">Acc:</string>
    <string name="gps_speed_label">Speed:</string>
    <string name="gps_bearing_label">Bearing:</string>
    <string name="gps_num_sats_label"># Sats:</string>
    <string name="pdop_label">PDOP:</string>
    <string name="hvdop_label">H/V DOP:</string>
</resources>