<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016, 2017 Oliver Bell
  ~ Copyright (C) 2010, 2011, 2012 Herbert von Broeuschmeul
  ~ Copyright (C) 2010, 2011, 2012 BluetoothGPS4Droid Project
  ~ Copyright (C) 2011, 2012 UsbGPS4Droid Project
  ~
  ~ This file is part of UsbGPS4Droid.
  ~
  ~  UsbGPS4Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UsbGPS4Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UsbGPS4Droid. If not, see <http://www.gnu.org/licenses/>.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <TableLayout android:id="@+id/lat_long_table"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
            <TableRow>
                <TextView android:id="@+id/latitude_label"
                          android:text="@string/gps_latitude_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/latitude"
                          style="@style/info_value"/>

                <TextView android:id="@+id/fix_time_label"
                          android:text="@string/gps_fix_time_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/fix_time"
                          style="@style/info_value"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/longitude_label"
                          android:text="@string/gps_longitude_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/longitude"
                          style="@style/info_value"/>

                <TextView android:id="@+id/gps_ttff_label"
                          android:text="@string/gps_ttff_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/ttff"
                          style="@style/info_value"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/altitude_label"
                          android:text="@string/gps_altitude_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/altitude"
                          style="@style/info_value"/>

                <TextView android:id="@+id/accuracy_label"
                          android:text="@string/gps_accuracy_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/accuracy"
                          style="@style/info_value"/>
            </TableRow>

            <TableRow>
                <TextView android:id="@+id/altitude_msl_label"
                          android:text="@string/gps_altitude_msl_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/altitude_msl"
                          style="@style/info_value"/>

                <TextView android:id="@+id/speed_label"
                          android:text="@string/gps_speed_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/speed"
                          style="@style/info_value"/>

            </TableRow>
            <TableRow>
                <TextView android:id="@+id/num_sats_label"
                          android:text="@string/gps_num_sats_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/num_sats"
                          style="@style/info_value"/>

                <TextView android:id="@+id/bearing_label"
                          android:text="@string/gps_bearing_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"/>

                <TextView android:id="@+id/bearing"
                          style="@style/info_value"/>
            </TableRow>
            <TableRow>
                <TextView android:id="@+id/pdop_label"
                          android:text="@string/pdop_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"
                          android:visibility="gone"/>

                <TextView android:id="@+id/pdop"
                          style="@style/info_value"
                          android:visibility="gone"/>

                <TextView android:id="@+id/hvdop_label"
                          android:text="@string/hvdop_label"
                          android:layout_gravity="right"
                          android:layout_marginRight="8dip"
                          style="@style/info_label"
                          android:visibility="gone"/>

                <TextView android:id="@+id/hvdop"
                          style="@style/info_value"
                          android:visibility="gone"/>
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <GridView android:id="@+id/sv_grid"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:padding="4dp"
              android:verticalSpacing="1dp"
              android:horizontalSpacing="2dp"
              android:numColumns="6"
              android:rowHeight="16dp"
              android:columnWidth="50dp"
              android:stretchMode="columnWidth"
              android:listSelector="@android:color/transparent"
              android:gravity="center"
            />
</LinearLayout>
