<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016, 2017, 2018 Oliver Bell
  ~ Copyright (C) 2010, 2011, 2012 Herbert von Broeuschmeul
  ~ Copyright (C) 2010, 2011, 2012 BluetoothGPS4Droid Project
  ~ Copyright (C) 2011, 2012 UsbGPS4Droid Project
  ~
  ~ This file is part of UsbGPS4Droid.
  ~
  ~  UsbGPS4Droid is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ UsbGPS4Droid is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with UsbGPS4Droid. If not, see <http://www.gnu.org/licenses/>.
  -->
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    >
    <TextView
        android:id="@+id/num_satellites_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_satellites_placeholder"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/accuracy_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/accuracy_placeholder"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/num_satellites_text"
        />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/location_placeholder"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/accuracy_text"
        />

    <TextView
        android:id="@+id/elevation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/elevation_placeholder"
        android:textAppearance="?android:textAppearanceMedium"
        app:layout_constraintTop_toBottomOf="@id/location_text"
        />

    <TextView
        android:id="@+id/gps_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/gps_time_placeholder"
        app:layout_constraintTop_toBottomOf="@id/elevation_text"
        />

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="More"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</android.support.constraint.ConstraintLayout>